# iplookup

./: Cargo.toml  spin.toml
src/: lib.rs
src/controllers/: index.rs  lookup.rs  mod.rs
static-assets/: spin.toml
templates/: error.html  index.html  result.html
