[package]
name = "iplookup"
authors = ["admin <thando.mafela@gmail.com>"]
description = "GeoIP lookup — Wizer-pre-initialized MaxMind database"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "5.2.0"
maxminddb = { version = "0.24", default-features = false }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
